# llm-inference-server

./: README.md  main.py  pyproject.toml
llm-inference-server-backend/notes/: 3_quantization.md  4_safetensors_gguf.md  6_prompt_caching.md
llm-inference-server-backend/src/llm_inference_server/: main.py
llm-inference-server-backend/src/llm_inference_server/routers/: api.py
llm-inference-server-backend/src/llm_inference_server/schemas/: model.py
llm-inference-server-backend/src/llm_inference_server/services/: chat_service.py
llm-inference-server-backend/src/llm_inference_server/types/: model.py
llm-inference-server-frontend/: package-lock.json  package.json
llm-inference-server-frontend/app/: globals.css  layout.tsx  page.tsx
llm-inference-server-frontend/components/chat/: ChatInput.tsx  MessageBubble.tsx
llm-inference-server-frontend/components/icons/: CloseIcon.tsx  InfoIcon.tsx  SettingsIcon.tsx
llm-inference-server-frontend/components/settings/: InputField.tsx  SettingsModal.tsx
llm-inference-server-frontend/components/ui/: InfoTooltip.tsx
llm-inference-server-frontend/lib/: api.ts  model.ts
notes/: 0.Attention.md  1_prefill_decode.md  2_batching.md  4_safetensors_gguf.md  5_initial_measurements.md
scripts/: dev.py
src/llm_inference_server/: __init__.py  main.py
src/llm_inference_server/routers/: api.py
src/llm_inference_server/services/: chat_service.py
src/llm_inference_server/types/: model.py
